--- a/CSS/screen/6info.css
+++ b/CSS/screen/6info.css
@@ -106,3 +106,25 @@
     margin-bottom: 5px;
     margin-left: 5px;
 }
+
+
+@keyframes fadeIn2 {
+    from {
+      transform: translateX(-10px);
+      opacity:0 ;
+      
+    }
+  
+    to {
+      transform: none;
+      opacity:1 ;
+  
+    }
+  
+    
+  }
+  
+  .message-row {
+    font-weight: 600;
+    animation : fadeIn2 0.5s linear;
+  }
