--- a/CSS/screen/6info.css
+++ b/CSS/screen/6info.css
@@ -203,6 +203,10 @@
   transform: translateX(-13%) translateY(-80px);
 }
 
+.reply:focus-within i {
+  transform:  translateY(-80px);
+}
+
 .reply:focus-within {
   transform: translateY(80px);
 }
